--- a/output.yml
+++ b/output.yml
@@ -45,7 +45,6 @@ AdminCommandsDescription-closeticket: '&C/closeticket [r] <#>'
 AdminCommandsDescription-delticket: '&C/delticket <#>'
 AdminCommandsDescription-purgeticket: '&C/purgetickets [-c/-a]'
 AdminCommandsDescription-reload: '&C/helptickets reload'
-
 Error: '&rError:&w &arg'
 InvalidTicketNumber: '&rInvalid Ticket Number:&w &arg'
 TicketNotExist: '&rTicket&Y &arg &rdoes not exist'
@@ -78,5 +77,6 @@ NoTickets: '&1No tickets to display'
 HelpMe_Line1: '&wTo request help or report grief, stand at the relevant location and open a ticket with an informative description of the issue.'
 HelpMe_Line2: '&2For more information, type: &G/HelpTickets'
 AdminJoin: 'There are currently&Y &arg &wopen Help Tickets'
+UserJoinOne: 'You currently have &Y &arg &wopen Help Tickets'
 UserJoin: 'You currently have &Y &arg &wopen Help Tickets'
 UserJoin-TicketReplied: 'One of your tickets has recieved a reply from an admin'
