Början på /klart kommandot för tickets

--- a/plugin.yml
+++ b/plugin.yml
@@ -44,3 +44,7 @@ commands:
       description: Purge all expired tickets
       permission: sht.purge
       usage: /purgetickets
+   klart:
+   	  description: Används av lärlingar för att få deras hus i Noobville godkända
+   	  permission: sht.klart
+   	  usage: /klart
