--- a/output.yml
+++ b/output.yml
@@ -18,6 +18,7 @@ UserCommandsMenu-helpme: ' &w- Explain how to open a ticket'
 UserCommandsMenu-Title: '&Y[ &wUser Commands &Y]'
 UserCommandsMenu-ticket: ' &w- Open a Help ticket [Stand @ Location]'
 UserCommandsMenu-tickets: ' &w- View your tickets'
+UserCommandsMenu-klart: ' &w- Used to get your building inspected'
 UserCommandsMenu-checkticket: ' &w- Check one of your tickets info'
 UserCommandsMenu-replyticket: ' &w- Reply to one of your tickets'
 UserCommandsMenu-closeticket: ' &w- Close one of your tickets'
@@ -25,6 +26,7 @@ UserCommandsMenu-delticket: ' &w- Delete a ticket'
 AdminCommandsMenu-Title: '&Y[ &wAdmin Commands &Y]'
 AdminCommandsMenu-tickets: ' &w- List Open/All/Closed tickets'
 AdminCommandsMenu-taketicket: ' &w- Assign yourself to a ticket'
+ConsoleCommandsMenu-taketicket: ' &w- Assign someone to a ticket'
 AdminCommandsMenu-replyticket: ' &w- Reply to a ticket'
 AdminCommandsMenu-closeticket: ' &w- Close or Reopen a ticket'
 AdminCommandsMenu-delticket: ' &w- Delete a ticket'
@@ -38,8 +40,10 @@ UserCommandsDescription-checkticket: '&G/checkticket <#>'
 UserCommandsDescription-replyticket: '&G/replyticket <#> <Reply>'
 UserCommandsDescription-closeticket: '&G/closeticket <#>'
 UserCommandsDescription-delticket: '&G/delticket <#>'
+UserCommandsDescription-klart: '&G/klart'
 AdminCommandsDescription-tickets: '&C/tickets [ac]'
 AdminCommandsDescription-taketicket: '&C/taketicket <#>'
+ConsoleCommandsDescription-taketicket: '&C/taketicket <#> <player>'
 AdminCommandsDescription-replyticket: '&C/replyticket <#> <Reply>'
 AdminCommandsDescription-closeticket: '&C/closeticket [r] <#>'
 AdminCommandsDescription-delticket: '&C/delticket <#>'
@@ -70,6 +74,8 @@ UserRepliedToTicket: '&Y%player &whas replied to ticket #:&Y &arg'
 CannotTakeClosedTicket: '&rCannot take a closed ticket'
 TakeTicketOWNER: '&Y &admin &wis reviewing your ticket #:&Y &arg'
 TakeTicketADMIN: '&Y &admin &wis reviewing ticket #:&Y &arg'
+TakeTicketAssignedADMIN: '&YTicket #&w&arg &Yis now assigned to you'
+TakeTicketAssignedADMINTP: '&YYou are being teleported to the ticket location in 3 seconds...'
 TicketOpen: '&gYou have successfully opened a &YHelp Ticket&g, please wait for it to be reviewed'
 TicketOpenADMIN: '&Y%player &whas opened a &YHelp Ticket'
 TicketMax: '&rYou have reached your limit of&Y &arg &rTickets'
