=1.7= /klart is now fully working with MyChunk. It checks the chunk the player is standing in to se if the player owns it or not.

--- a/config.yml
+++ b/config.yml
@@ -17,6 +17,7 @@
 # ConsoleWait is the time that SHT should wait to teleport
 # the assigned admin when using /taketicket via console
 MaxTickets: 3
+MaxHouseInspect: 1
 TicketExpiration: 7
 NotifyAdminOnTicketClose: true
 MultiWorld: false
