--- a/output.yml
+++ b/output.yml
@@ -67,6 +67,8 @@ TicketReopened: '&wTicket&Y &arg &wReopened'
 TicketReopenedOWNER: '&Y &admin&w has reopened your ticket #:&Y &arg'
 TicketReopenedADMIN: '&Y &admin&w has reopened ticket #:&Y &arg'
 AllClosedTicketsPurged: '&gAll closed tickets successfully purged'
+ClosedTickets: '&CStängda Tickets'
+OpenTickets: '&YÖppna Tickets'
 AllTicketsPurged: '&gAll tickets successfully purged'
 AdminRepliedToTicket: '&wReplied to ticket:&Y &arg'
 AdminRepliedToTicketOWNER: '&Y&admin&w has replied to your help ticket'
@@ -86,3 +88,12 @@ AdminJoin: 'There are currently&Y &arg &wopen Help Tickets'
 UserJoinOne: 'You currently have &Y &arg &wopen Help Tickets'
 UserJoin: 'You currently have &Y &arg &wopen Help Tickets'
 UserJoin-TicketReplied: 'One of your tickets has recieved a reply from an admin'
+HouseNewInspect: '&Y%player &wvill ha sitt hus inspekterat'
+HouseNew_Line1: '&YYour house is now flagged for inspection!.'
+HouseNew_Line2: '&YSome other message'
+HouseInspection: 'Mitt Noobville hus är redo för inspektion!'
+HousePending: 'Väntar..'
+HouseAccept: 'Accepterad'
+HouseDeny: 'Nekad'
+HouseMaxInspect: '&rDu har redan ett hus som väntar inspektion!'
+ChunkNotOwn: '&rYou have to be the owner of this chunk to get it inspected!'
