==1.8== House system now fully working, /klart is required that you stand in a chunk that you own. You can also check the status of your house ticket. Houses have a separate database for logging purposes.
Added:
/housestatus (alias: hstatus)
/klart

Fixed:
Some output issues
SQL issues

--- a/output.yml
+++ b/output.yml
@@ -12,6 +12,8 @@
 # %player - Player you trigered the command
 # ------------------------------------------
 Prefix: '&2[SimpleHelpTickets]'
+PrefixWithID: '&2[&YTicket &arg&2]'
+HousePrefixWithID: '&2[&YHus Inspektion &arg&2]'
 HelpPageTitle: '&2[SimpleHelpTickets]'
 UserCommandsMenu-helptickets: ' &w- Display the commands menu'
 UserCommandsMenu-helpme: ' &w- Explain how to open a ticket'
@@ -49,6 +51,12 @@ AdminCommandsDescription-closeticket: '&C/closeticket [r] <#>'
 AdminCommandsDescription-delticket: '&C/delticket <#>'
 AdminCommandsDescription-purgeticket: '&C/purgetickets [-c/-a]'
 AdminCommandsDescription-reload: '&C/helptickets reload'
+UserHusCommandsMenu-house: ' &w- Show this menu'
+UserHusCommandsMenu-klart: ' &w- Used to get your house inspected'
+UserHusCommandsMenu-housestatus: ' &w- Check the status of your house inspection'
+UserHusCommandsDescription-house: '&C/house'
+UserHusCommandsDescription-klart: '&C/klart'
+UserHusCommandsDescription-housestatus: '&C/hstatus'
 Error: '&rError:&w &arg'
 InvalidTicketNumber: '&rInvalid Ticket Number:&w &arg'
 TicketNotExist: '&rTicket&Y &arg &rdoes not exist'
@@ -93,7 +101,28 @@ HouseNew_Line1: '&YYour house is now flagged for inspection!.'
 HouseNew_Line2: '&YSome other message'
 HouseInspection: 'Mitt Noobville hus är redo för inspektion!'
 HousePending: 'Väntar..'
-HouseAccept: 'Accepterad'
-HouseDeny: 'Nekad'
+HouseAccepted: 'Accepterad'
+HouseDenied: 'Nekad'
 HouseMaxInspect: '&rDu har redan ett hus som väntar inspektion!'
 ChunkNotOwn: '&rYou have to be the owner of this chunk to get it inspected!'
+CheckListOwner: '&bOwner: &w&arg'
+CheckListDate: '&bDate: &w&arg'
+CheckListWorld: '&bWorld: &w&arg'
+CheckListStatus: '&bStatus: &w&arg'
+CheckListAssigned: '&bAssigned: &w&arg'
+CheckListDescription: '&bTicket: &w&arg'
+CheckListAdminReply: '&bAdmin Reply: &w&arg'
+CheckListUserReply: '&bUser Reply: &w&arg'
+CheckListExpiration: '&bExpiration: &w&arg'
+CheckListNoReply: '&w(none)'
+CheckListNoAdminAssigned: '&rIngen'
+HouseCheckListOwner: '&bOwner: &w&arg'
+HouseCheckListDate: '&bDate: &w&arg'
+HouseCheckListWorld: '&bWorld: &w&arg'
+HouseCheckListStatus: '&bStatus: &w&arg'
+HouseCheckListAssigned: '&bAssigned: &w&arg'
+HouseCheckListDescription: '&bTicket: &w&arg'
+HouseCheckListAdminReply: '&bAdmin Reply: &w&arg'
+HouseCheckListUserReply: '&bUser Reply: &w&arg'
+HouseCheckListExpiration: '&bExpiration: &w&arg'
+HouseCheckListNoReply: '&w(none)'
