You can now approve a house ticket, delete and deny still under process.
Minor buggfixes

--- a/output.yml
+++ b/output.yml
@@ -54,9 +54,15 @@ AdminCommandsDescription-reload: '&C/helptickets reload'
 UserHusCommandsMenu-house: ' &w- Show this menu'
 UserHusCommandsMenu-klart: ' &w- Used to get your house inspected'
 UserHusCommandsMenu-housestatus: ' &w- Check the status of your house inspection'
+UserHusCommandsMenu-ahouseaccept: ' &w- Approve a house'
+UserHusCommandsMenu-ahousedeny: ' &w- Deny a house'
+UserHusCommandsMenu-ahousedelete: ' &w- Delete a house ticket'
 UserHusCommandsDescription-house: '&C/house'
 UserHusCommandsDescription-klart: '&C/klart'
 UserHusCommandsDescription-housestatus: '&C/hstatus'
+UserHusCommandsDescription-ahouseaccept: '&C/ahus accept'
+UserHusCommandsDescription-ahousedeny: '&C/ahus deny'
+UserHusCommandsDescription-ahousedelete: '&C/ahus delete'
 Error: '&rError:&w &arg'
 InvalidTicketNumber: '&rInvalid Ticket Number:&w &arg'
 TicketNotExist: '&rTicket&Y &arg &rdoes not exist'
@@ -103,6 +109,8 @@ HouseInspection: 'Mitt Noobville hus är redo för inspektion!'
 HousePending: 'Väntar..'
 HouseAccepted: 'Accepterad'
 HouseDenied: 'Nekad'
+HouseAcceptedOWNER: '&Y &admin &whas approved your house'
+HouseDeniedOWNER: '&Y &admin &whas denied your house, do /hstatus for info'
 HouseMaxInspect: '&rDu har redan ett hus som väntar inspektion!'
 ChunkNotOwn: '&rYou have to be the owner of this chunk to get it inspected!'
 CheckListOwner: '&bOwner: &w&arg'
