--- a/output.yml
+++ b/output.yml
@@ -68,6 +68,7 @@ InvalidTicketNumber: '&rInvalid Ticket Number:&w &arg'
 TicketNotExist: '&rTicket&Y &arg &rdoes not exist'
 NotYourTicketToCheck: '&rThis is not your ticket to check'
 NotYourTicketToClose: '&rThis is not your ticket to close'
+NotYourTicketToDelete: '&rThis is not your ticket to delete'
 NewConfig: '&rConfig.yml missing, generating a new one..."'
 NewOutput: '&rOutput.yml missing, generating a new one..."'
 ConfigReloaded: '&gConfig and output Reloaded'
@@ -94,7 +95,9 @@ TakeTicketAssignedADMIN: '&YTicket #&w&arg &Yis now assigned to you'
 TakeTicketAssignedADMINTP: '&YYou are being teleported to the ticket location in 3 seconds...'
 TicketOpen: '&gYou have successfully opened a &YHelp Ticket&g, please wait for it to be reviewed'
 TicketOpenADMIN: '&Y%player &whas opened a &YHelp Ticket'
+TicketDeleted: '&YTicket &arg deleted.'
 TicketMax: '&rYou have reached your limit of&Y &arg &rTickets'
+TicketNotEnough: '&rPlease be more specific of your issue..'
 NoTickets: '&1No tickets to display'
 HelpMe_Line1: '&wTo request help or report grief, stand at the relevant location and open a ticket with an informative description of the issue.'
 HelpMe_Line2: '&2For more information, type: &G/HelpTickets'
