Fixed permission issues Minor changes

--- a/output.yml
+++ b/output.yml
@@ -20,7 +20,7 @@ UserCommandsMenu-helpme: ' &w- Explain how to open a ticket'
 UserCommandsMenu-Title: '&Y[ &wUser Commands &Y]'
 UserCommandsMenu-ticket: ' &w- Open a Help ticket [Stand @ Location]'
 UserCommandsMenu-tickets: ' &w- View your tickets'
-UserCommandsMenu-klart: ' &w- Used to get your building inspected'
+UserCommandsMenu-house: ' &w- Used to get your building inspected'
 UserCommandsMenu-checkticket: ' &w- Check one of your tickets info'
 UserCommandsMenu-replyticket: ' &w- Reply to one of your tickets'
 UserCommandsMenu-closeticket: ' &w- Close one of your tickets'
@@ -42,7 +42,7 @@ UserCommandsDescription-checkticket: '&G/checkticket <#>'
 UserCommandsDescription-replyticket: '&G/replyticket <#> <Reply>'
 UserCommandsDescription-closeticket: '&G/closeticket <#>'
 UserCommandsDescription-delticket: '&G/delticket <#>'
-UserCommandsDescription-klart: '&G/klart'
+UserCommandsDescription-house: '&G/hus'
 AdminCommandsDescription-tickets: '&C/tickets [ac]'
 AdminCommandsDescription-taketicket: '&C/taketicket <#>'
 ConsoleCommandsDescription-taketicket: '&C/taketicket <#> <player>'
