--- a/output.yml
+++ b/output.yml
@@ -82,8 +82,8 @@ TicketReopened: '&wTicket&Y &arg &wReopened'
 TicketReopenedOWNER: '&Y &admin&w has reopened your ticket #:&Y &arg'
 TicketReopenedADMIN: '&Y &admin&w has reopened ticket #:&Y &arg'
 AllClosedTicketsPurged: '&gAll closed tickets successfully purged'
-ClosedTickets: '&CStängda Tickets'
-OpenTickets: '&YÖppna Tickets'
+ClosedTickets: '&CStangda Tickets'
+OpenTickets: '&YOppna Tickets'
 AllTicketsPurged: '&gAll tickets successfully purged'
 AdminRepliedToTicket: '&wReplied to ticket:&Y &arg'
 AdminRepliedToTicketOWNER: '&Y&admin&w has replied to your help ticket'
@@ -102,19 +102,20 @@ NoTickets: '&1No tickets to display'
 HelpMe_Line1: '&wTo request help or report grief, stand at the relevant location and open a ticket with an informative description of the issue.'
 HelpMe_Line2: '&2For more information, type: &G/HelpTickets'
 AdminJoin: 'There are currently&Y &arg &wopen Help Tickets'
+AdminJoinHouse: 'There are currently&Y &arg &wopen House Tickets'
 UserJoinOne: 'You currently have &Y &arg &wopen Help Tickets'
 UserJoin: 'You currently have &Y &arg &wopen Help Tickets'
 UserJoin-TicketReplied: 'One of your tickets has recieved a reply from an admin'
 HouseNewInspect: '&Y%player &wvill ha sitt hus inspekterat'
 HouseNew_Line1: '&YYour house is now flagged for inspection!.'
 HouseNew_Line2: '&YSome other message'
-HouseInspection: 'Mitt Noobville hus är redo för inspektion!'
-HousePending: 'Väntar..'
+HouseInspection: 'Mitt Noobville hus ar redo for inspektion!'
+HousePending: 'Vantar..'
 HouseAccepted: 'Accepterad'
 HouseDenied: 'Nekad'
 HouseAcceptedOWNER: '&Y &admin &whas approved your house'
 HouseDeniedOWNER: '&Y &admin &whas denied your house, do /hstatus for info'
-HouseMaxInspect: '&rDu har redan ett hus som väntar inspektion!'
+HouseMaxInspect: '&rDu har redan ett hus som vantar inspektion!'
 ChunkNotOwn: '&rYou have to be the owner of this chunk to get it inspected!'
 CheckListOwner: '&bOwner: &w&arg'
 CheckListDate: '&bDate: &w&arg'
